feat: refactored category and product service, added entity graph to product service where needed to improve efficiency